Fixed footer background color and text align

--- a/main.css
+++ b/main.css
@@ -24,7 +24,7 @@
     font-family: sans-serif;
     font-size: 48px;
     font-weight: 700;
-    text-align: center;
-    background-color: lightslategray;
+    text-align: right;
+    background-color: rgb(53, 170, 98);
     color: #fff;
 }
